--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,11 @@ ibm:
   mq:
     queueManager: QM1
     channel: DEV.ADMIN.SVRCONN
-    connName: https://ibm-routes-sudhir6969-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
-    host: https://ibm-routes-sudhir6969-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
-    port: 1414
+    connName: ibm-routes-sudhir6969-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
+    host: ibm-routes-sudhir6969-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
+    port: 9443
     user: admin
+    password: passw0rd
   queues:
     sampleQueues: MQCLIENT_MQ1.RESPONSE.FROM.MQSERVER_MQ2,MQCLIENT_MQ1.RESPONSE.FROM.MQSERVER_MQ1
 
